Changes in version 1-3-0.1 (xx/xx/2015)
    * we now require R 2.3.0 so cbind in Matrix works.
    * is.maximal is now also avaialble for rules.
    * APparameter: confidence shows not NA for frequent itemsets.
    

Changes in version 1-3-0 (11/11/2015)
    * removed deprecated WRITE and SORT functions.
    * ruleInduction: bug fix for missing confidence values and better checking 
      (by C. Buchta). 
    * subset extraction: added checks, handles now NAs and recycles for logical.
    * read.transactions gained arguments skip and quote and some defaults for
      read and write (uses now quotes and no rownames by default) have changed.
    * itemMatrix: coersion from matrix checks now for 0-1 matrix with a warning.
    * APRIORI and ECLAT report now absolute minimum support.
    * APRIORI: out-of-memory while rule building does now result in an error and
      not a memory fault.
    * aggregate uses now 'by' instead of 'itemLabels' to conform to 
      aggregate in base.
    
Changes in version 1-2-1 (09/20/2015)
    * Added many new interest measures.
    * interestMeasure: the formal argument method is now called measure 
      (method is now deprecated).
    * Added Mushroom dataset.
    * Moved abbreviate from arulesViz to arules.
    * fixed undefined behavior for left shift in reclat.c 
      (reported by B. Ripley)

Changes in version 1-2-0 (09/14/2015)
    * added support for weighted association rule mining (by C. Buchta):
        - transactions can store weights a column called "weight" in 
            transactionInfo.
        - support, itemFrequency and itemFrequencyPlot gained a parameter
            called weighted.
        - weclat extends eclat with transaction weights.
        - hits can be used to calculate weights from transact ions.
    * sort can now sort by several columns (used to break ties) in quality. 
      It also gained an order parameter to return a permutation vector
      (order) instead.