@@ -1,6 +1,7 @@
 Changes in version 1-3-0.1 (xx/xx/2015)
     * we now require R 2.3.0 so cbind in Matrix works.
-    * is.maximal is now also avaialble for rules.
+    * is.maximal is now also available for rules.
+    * added is.significant for rules (used Fishers exact test).
     * APparameter: confidence shows not NA for frequent itemsets.
     
 
